--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "loftblog_angular_phonecat_app",
+  "name": "testApp",
   "description": "A starter project for AngularJS on LoftBlog",
   "version": "0.0.2",
   "homepage": "https://github.com/Severenit/loftblog_angular_phonecat_app",
@@ -8,9 +8,9 @@
   "dependencies": {
     "angular": "^1.6.1",
     "angular-animate": "^1.6.1",
-    "angular-cookie": "^4.1.0",
     "angular-material": "^1.1.1",
     "jquery": "^3.1.1",
-    "moment": "momentjs#^2.17.1"
+    "moment": "momentjs#^2.17.1",
+    "angular-cookies": "^1.6.1"
   }
 }
