--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-material": "^1.1.1",
     "jquery": "^3.1.1",
     "moment": "momentjs#^2.17.1",
-    "angular-cookies": "^1.6.1"
+    "angular-cookies": "^1.6.1",
+    "angular-resource": "^1.6.1"
   }
 }
